rke2.d/bioskop/master/manifests.d/cicd/tekton-dashboard/02-ingress-tekton-dashboard.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: networking.k8s.io|Ingress|tekton-pipelines|tekton-dashboard
    kpt.dev/package-layer: cicd
    kpt.dev/package-name: tekton-dashboard
    kube-vip.io/address-pool: lan-lb
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: tekton-dashboard-strip@kubernetescrd
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  ingressClassName: traefik
  rules:
    - host: bioskop-web-proxy.lan
      http:
        paths:
          - backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
            path: /tekton
            pathType: Prefix
